# Zappy-2029-team-A

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  run_ai.sh
.github/: PR_TEMPLATE.md
.github/workflows/: gui-ci.yml  server-ci.yml
ai/: agent.py  double_dqn_logic.ipynb  main.py  zappy_ai
ai/network/: client.py
ai/rl/: model.py
ai/strategy/: agent.py  levels.py  parser.py  state.py  vision.py
docs/: GUI_ARCHITHECTURE.md
gui/: CMakeLists.txt
gui/include/: Egg.hpp  GameState.hpp  GuiArgs.hpp  GuiClient.hpp  GuiEventApplier.hpp  GuiProtocolDecoder.hpp  GuiProtocolEvent.hpp  Player.hpp  ProtocolCommand.hpp  ProtocolParser.hpp  Resource.hpp
gui/include/client/: GuiClient.hpp
gui/include/net/: NetworkClient.hpp
gui/include/protocol/: GuiEventApplier.hpp  GuiProtocolEvent.hpp
gui/include/render/: BroadcastRenderer.hpp  EggRenderer.hpp  ExpulsionRenderer.hpp  IncantationRenderer.hpp  MagnumRenderer.hpp  MapRenderer.hpp  PlayerRenderer.hpp  RenderCamera.hpp  RenderGeometry.hpp  RenderMeshFactory.hpp  ResourceRenderer.hpp
gui/include/render/3d/: EggModelRenderer3D.hpp  GltfModelLoader3D.hpp  MapRenderer3D.hpp  Model3D.hpp  ModelRenderer3D.hpp  ObjModelLoader3D.hpp  PlanetCameraController.hpp  PlanetGeometry3D.hpp  PlayerModelRenderer3D.hpp  RenderCamera3D.hpp  RenderGeometry3D.hpp  RenderMeshFactory3D.hpp  ResourceModelRenderer3D.hpp  SkinnedAnimation3D.hpp  SkinnedModelRenderer3D.hpp  SkinnedShader3D.hpp
gui/include/render/3d/gltf/: GltfAnimationLoader3D.hpp  GltfMaterialLoader3D.hpp  GltfMeshLoader3D.hpp  GltfSceneLoader3D.hpp  GltfSkinLoader3D.hpp
gui/include/state/: Broadcast.hpp  Expulsion.hpp  GameState.hpp  Incantation.hpp  Tile.hpp
gui/src/: Egg.cpp  GameState.cpp  GuiArgs.cpp  GuiClient.cpp  GuiEventApplier.cpp  GuiProtocolDecoder.cpp  GuiProtocolHandlers.cpp  Player.cpp  ProtocolCommand.cpp  ProtocolParser.cpp  Resource.cpp  main.cpp
gui/src/client/: GuiArgs.cpp  GuiClient.cpp
gui/src/net/: NetworkClient.cpp
gui/src/protocol/: GuiEventApplier.cpp  GuiProtocolDecoder.cpp  ProtocolCommand.cpp  ProtocolParser.cpp
gui/src/render/: BroadcastRenderer.cpp  EggRenderer.cpp  ExpulsionRenderer.cpp  IncantationRenderer.cpp  MagnumRenderer.cpp  MapRenderer.cpp  PlayerRenderer.cpp  RenderCamera.cpp  RenderGeometry.cpp  RenderMeshFactory.cpp  ResourceRenderer.cpp
gui/src/render/3d/: EggModelRenderer3D.cpp  GltfModelLoader3D.cpp  MapRenderer3D.cpp  Model3D.cpp  ModelRenderer3D.cpp  ObjModelLoader3D.cpp  PlanetCameraController.cpp  PlanetGeometry3D.cpp  PlayerModelRenderer3D.cpp  RenderCamera3D.cpp  RenderGeometry3D.cpp  RenderMeshFactory3D.cpp  ResourceModelRenderer3D.cpp  SkinnedAnimation3D.cpp  SkinnedModelRenderer3D.cpp  SkinnedShader3D.cpp
gui/src/render/3d/gltf/: GltfAnimationLoader3D.cpp  GltfMaterialLoader3D.cpp  GltfMeshLoader3D.cpp  GltfSceneLoader3D.cpp  GltfSkinLoader3D.cpp
gui/src/state/: Broadcast.cpp  Egg.cpp  Expulsion.cpp  GameState.cpp  Incantation.cpp  Player.cpp  Resource.cpp  Tile.cpp
server/: .gitignore  Cargo.toml
server/docs/: AI_PROTOCOL.md  GUI_PROTOCOL.md
server/src/: handle_client.rs  handle_command.rs  handle_requests.rs  main.rs  parser.rs  server.rs  timers.rs  utils.rs
server/src/cmd/: broadcast.rs  connect_nbr.rs  eject.rs  fork.rs  forward.rs  incantation.rs  inventory.rs  left.rs  look.rs  mod.rs  right.rs  set.rs  take.rs  unknown.rs
server/src/gui_cmd/: bct.rs  mct.rs  mod.rs  msz.rs  pin.rs  plv.rs  ppo.rs  sgt.rs  sst.rs  tna.rs  unknown_gui.rs
tests/: Makefile  test_resource.cpp
tests/gui/: test_egg.cpp  test_event_applier.cpp  test_gamestate.cpp  test_gamestate_read_api.cpp  test_player.cpp  test_protocol.cpp  test_protocol_decoder.cpp  test_resource.cpp  test_tile.cpp
tools/: mock_gui_server.py
